base elements styling

--- a/frontend/src/app/components/core/footer/footer.component.html
+++ b/frontend/src/app/components/core/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div class="container-fluid text-center">
+  created by <span class="text-info">Mateusz Andrzejewski &copy;</span>
+</div>
