--- a/frontend/src/app/components/core/header/header.component.html
+++ b/frontend/src/app/components/core/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<nav class="navbar navbar-inverse bg-primary">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a href="#" class="navbar-brand text-white">Team Player App</a>
+    </div>
+    <ul class="nav navbar navbar-right gap-2">
+      <li>
+        <a class="text-white text-dark" href="#"
+          >Logowanie<i class="material-icons ps-2">login</i></a
+        >
+      </li>
+      <li>
+        <a class="text-white" href="#"
+          >Rejestracja<i class="material-icons ps-2">person</i></a
+        >
+      </li>
+    </ul>
+  </div>
+</nav>
