--- a/frontend/src/app/components/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/components/core/sidebar/sidebar.component.html
@@ -1,8 +1,10 @@
-<ul ngbNav class="nav-pills" orientation="vertical">
-  <li ngbNavItem>
-    <a ngbNavLink>Organizacja grania</a>
-  </li>
-  <li ngbNavItem>
-    <a ngbNavLink>Zarządzanie zawodnikami</a>
-  </li>
-</ul>
+<div class="sidebar-menu border rounded p-2">
+  <ul ngbNav class="nav-pills" orientation="vertical">
+    <li ngbNavItem>
+      <a ngbNavLink>Organizacja grania</a>
+    </li>
+    <li ngbNavItem>
+      <a ngbNavLink>Zarządzanie zawodnikami</a>
+    </li>
+  </ul>
+</div>
