--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,10 @@
 <app-header></app-header>
-<app-sidebar></app-sidebar>
-<app-not-found></app-not-found>
-<router-outlet></router-outlet>
+<div class="container mt-1">
+  <div class="row">
+    <app-sidebar class="col-12 col-sm-3"></app-sidebar>
+    <div class="col-12 col-sm-9">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
 <app-footer></app-footer>
